Fix pagination on Firefox

--- a/frontend/scss/style.scss
+++ b/frontend/scss/style.scss
@@ -49,6 +49,6 @@ main {
 }
 
 .footer-loader{
-	height: 40px;
-	background-color: $gray-100;
+	height: 10px;
+	margin: 15px 0;
 }
